--- a/output/shipping_confirmation_ja.html
+++ b/output/shipping_confirmation_ja.html
@@ -377,17 +377,17 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
        <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
             <!--[if !mso 9]><!-->
 
-    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">ショッピングカートに商品を追加されましたが、お支払いの処理が完了しませんでした。
+    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">{{ missing t.shipping_confirmation.iftext }}
 
 
     </div>
     <div id="custom-preview-text" style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;&#847;&#8204;&nbsp;</div>
     <!--<![endif]-->
-    {% capture default_utms %}utm_campaign=payment_error&utm_medium=email&utm_source=OrderlyEmails{% endcapture %}
+    {% capture default_utms %}utm_campaign=shipping_confirmation&utm_medium=email&utm_source=OrderlyEmails{% endcapture %}
     {% capture question_mark %}?{% endcapture %}
     <!-- SENSE -->
 
@@ -463,129 +463,6 @@
 
 
         
-            <!-- BEGIN: CONTAINER -->
-            <table class="container container_main" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
-              <tbody>
-                <tr>
-                  <th valign="top" style="mso-line-height-rule: exactly;">
-                    <center style="width: 100%;">
-                      <table border="0" width="620" cellpadding="0" cellspacing="0" align="center" style="width: 620px; min-width: 620px; max-width: 620px; direction: ltr; Margin: auto;" class="email-container" role="presentation">
-                        <tbody>
-                          <tr>
-                            <th valign="top" class="container_border" style="mso-line-height-rule: exactly;">
-                              <!-- BEGIN : SECTION : MAIN -->
-                              <table class="sections_container main" data-id="main" id="section-main" border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
-                                <tr>
-                                  <td class="" style="mso-line-height-rule: exactly;" bgcolor="#fefcf6">
-                                    <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" id="mixContainer" role="presentation">
-
-                                      <!-- BEGIN SECTION: Heading -->
-                                      <tr id="section-26492793" class="section heading">
-                                        <th class="section_border" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6">
-                                          <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
-                                            <tr>
-                                              <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6" valign="top">
-                                                <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
-                                                  <tr>
-                                                    <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                                      <h3 data-key="26492793_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-style: none; letter-spacing: 1.5px; Margin: 0;" align="left">お客様のお支払いを処理できませんでした</h3>
-                                                    </th>
-                                                  </tr>
-                                                </table>
-                                              </th>
-                                            </tr>
-                                          </table>
-                                        </th>
-                                      </tr>
-                                      <!-- END SECTION: Heading -->
-                                      <!-- BEGIN SECTION: Introduction -->
-                                      <tr id="section-26492794" class="section introduction">
-                                        <th class="section_border" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6">
-                                          <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
-                                            <tr>
-                                              <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6" valign="top">
-                                                {% if customer.first_name != blank or billing_address.first_name != blank %}
-                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">
-                                                    <span data-key="26492794_greeting_text" style="text-align: left; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000;">
-                                                      Dear
-                                                    </span>
-                                                    {{ customer.first_name | default: billing_address.first_name }},
-                                                  </p>
-                                                {% endif %}
-                                                <span data-key="26492794_introduction_text" class="text" style="text-align: left; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000;">
-                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 15px 0 0;" align="left"></p>
-                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 15px 0 0;" align="left">ショッピングカートに商品を追加されましたが、お支払いの処理が完了しませんでした。料金はまだ請求されておりません。</p>
-                                                </span>
-                                              </th>
-                                            </tr>
-                                          </table>
-                                        </th>
-                                      </tr>
-                                      <!-- END SECTION: Introduction -->
-                                      <!-- BEGIN SECTION: Button -->
-                                      <tr id="section-26492795" class="section button">
-                                        <th class="section_border" style="mso-line-height-rule: exactly; padding: 0 30px 8px;" bgcolor="#fefcf6">
-                                          <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
-                                            <tr>
-                                              <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6" valign="top">
-                                                <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
-                                                  <tr>
-                                                    <th class="sides column_text_before_button" data-key="26492795_text_before_button" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding-bottom: 15px;" align="left" bgcolor="#fefcf6" valign="top">引き続きカートに戻って、ご購入手続きを完了していただけます。                                                    </th>
-                                                  </tr>
-                                                  <!-- Button : BEGIN -->
-                                                  <tr>
-                                                    <th class="sides column_button button5" style="mso-line-height-rule: exactly; Margin: 0; padding: 15px 0;" align="center" bgcolor="#fefcf6" valign="top">
-                                                      <table cellspacing="0" cellpadding="0" border="0" class="button" role="presentation" style="direction: ltr; text-align: center; Margin: 0 auto;" bgcolor="transparent">
-                                                        <tr>
-                                                          <th class="button-inner" style="mso-line-height-rule: exactly; border-radius: 1px;" align="center" bgcolor="#000000" valign="top">
-                                                            <a class="button-link" href="{% capture link %}{{ url }}{% endcapture %}{% if link contains shop.domain %}{% assign split_link = link | split: question_mark %}{{ split_link[0] }}?{{ default_utms }}&utm_content=button&utm_term=return-to-cart{% if split_link[1] != blank %}&{{ split_link[1] }}{% endif %}{% else %}{{ link }}{% endif %}" target="_blank" style="color: #fefcf6 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; line-height: 15px; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; font-weight: 500; text-transform: none; text-align: center; display: block; background-color: #000000; border-radius: 1px; padding: 1px 20px; border: 15px solid #000000;"><span class="text-on-button" style="line-height: 15px; color: #fefcf6; font-weight: 500; text-decoration: none; text-underline: none; letter-spacing: 0.5px;"><!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--><span class="text-on-button-inner" data-key="26492795_text_on_button" style="line-height: 15px; color: #fefcf6; font-weight: 500; text-decoration: none; text-underline: none; letter-spacing: 0.5px;"> カートに戻る</span><!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--></span></a>
-                                                          </th>
-                                                        </tr>
-                                                      </table>
-                                                    </th>
-                                                  </tr>
-                                                  <!-- Button : END -->
-                                                </table>
-                                              </th>
-                                            </tr>
-                                          </table>
-                                        </th>
-                                      </tr>
-                                      <!-- END SECTION: Button -->
-                                      <!-- BEGIN SECTION: Closing Text -->
-                                      <tr id="section-26492796" class="section closing_text">
-                                        <th class="section_border" style="mso-line-height-rule: exactly; padding: 8px 30px 30px;" bgcolor="#fefcf6">
-                                          <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
-                                            <tr>
-                                              <th data-key="26492796_closing_text" class="section_content text" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding: 8px 30px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                ご不明な点やご質問がございましたら、どうぞお気軽に&nbsp;<a href="mailto: contact.jp@adamlippes.com" style="color: #000000 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; border-bottom-width: 1px; border-bottom-color: #5f5f5f; border-bottom-style: solid;"> contact.jp@adamlippes.com </a>&nbsp; までご連絡くださいませ。
-                                                <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"><br>
-                                                </p>
-                                                <br>
-                                                今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br>
-                                                アダム・リペス オンラインショップ
-                                              </th>
-                                            </tr>
-                                          </table>
-                                        </th>
-                                      </tr>
-                                      <!-- END SECTION: Closing Text -->
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                              <!-- END : SECTION : MAIN -->
-                            </th>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </center>
-                  </th>
-                </tr>
-              </tbody>
-            </table>
-            <!-- END : CONTAINER -->
-
                         <!-- BEGIN: CONTAINER -->
                 <table class="container container_footer" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
                   <tbody>
