--- a/output/return_created_ja.html
+++ b/output/return_created_ja.html
@@ -377,7 +377,7 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
        <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
             <!--[if !mso 9]><!-->
 
@@ -657,7 +657,7 @@
                                         <table cellspacing="0" cellpadding="0" border="0" width="100%" style="min-width: 100%; direction: ltr;" role="presentation">
                                           <tr>
                                             <th colspan="2" class="table_main_title" style="mso-line-height-rule: exactly;" bgcolor="#fcf6e5" valign="top">
-                                              <h3 data-key="26492953_item" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-width: 1px; border-bottom-color: #f8ecc8; border-bottom-style: solid; letter-spacing: 1.5px; Margin: 0;" align="left">Returned items</h3>
+                                              <h3 data-key="26492953_item" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-width: 1px; border-bottom-color: #f8ecc8; border-bottom-style: solid; letter-spacing: 1.5px; Margin: 0;" align="left">アダム・リペス オンラインショップ</h3>
                                             </th>
                                           </tr>
                                           {% for line_item in return.line_items %}
