--- a/output/loop_line_item_rejected_en.html
+++ b/output/loop_line_item_rejected_en.html
@@ -422,10 +422,7 @@
                           <table cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
                               <td align="left"
-                                style="font-size: 24px; line-height: 32px; color: #222222; text-align: left; font-weight: 500;"
-                                width="60%">{{image}}</td>
-                              <td align="right"
-                                style="font-size: 16px; line-height: 28px; color: #999999; text-align: right; text-transform: uppercase;"
+                                style="font-size: 16px; line-height: 28px; color: #999999; text-align: left; text-transform: uppercase;"
                                 width="40%">Order {{order}}</td>
                             </tr>
                           </table>
@@ -436,8 +433,8 @@
                       <!-- Thank you text -->
                       <tr style="padding-left: 20px; padding-right: 20px;">
                         <td valign="top" width="100%" style="padding-top: 24px;">
-                          <h1 style="font-size: 42px; line-height: 63px; text-align:left; color: #222222; font-weight: 600; display: block; margin: 0;">
-                            One or more of your returned products have been rejected.</h1>
+                          <p style="font-size: 24px; line-height: 36px; text-align:left; color: #222222; display: block; margin: 0;">
+                            One or more of your returned products have been rejected.</p><br><br>
                           {% if rejected_line_items.size > 0 %}
                           <div style="padding-top: 12px; padding-bottom: 12px;padding-left: 20px; padding-right: 20px;"">
                             <p
