--- a/output/payment_error_ja.html
+++ b/output/payment_error_ja.html
@@ -378,7 +378,9 @@
     </style>
   </head>
   <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-       <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+    <div style="background-color: #F5F5F5; padding: 0; margin: 0;">
+
+      <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
             <!--[if !mso 9]><!-->
 
     <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">ショッピングカートに商品を追加されましたが、お支払いの処理が完了しませんでした。
@@ -488,7 +490,8 @@
                                                 <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                                   <tr>
                                                     <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                                      <h3 data-key="26492793_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-style: none; letter-spacing: 1.5px; Margin: 0;" align="left">お客様のお支払いを処理できませんでした</h3>
+                                                      <h1 data-key="26492906_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; margin: 0;" align="center">お客様のお支払いを処理できませんでした</h1>
+
                                                     </th>
                                                   </tr>
                                                 </table>
@@ -692,6 +695,7 @@
                 <!-- END : CONTAINER -->
 
       </div>
+    </div>
   </body>
 </html>
 
