--- a/output/delivered_ja.html
+++ b/output/delivered_ja.html
@@ -378,7 +378,9 @@
     </style>
   </head>
   <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-       <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+    <div style="background-color: #F5F5F5; padding: 0; margin: 0;">
+
+      <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
             <!--[if !mso 9]><!-->
 
     <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">ご注文いただいた下記の商品が配達完了となりましたので、お知らせいたします。
@@ -1103,6 +1105,7 @@
                 <!-- END : CONTAINER -->
 
       </div>
+    </div>
   </body>
 </html>
 
