--- a/output/order_confirmation_en.html
+++ b/output/order_confirmation_en.html
@@ -377,9 +377,11 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-    <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
-          <!--[if !mso 9]><!-->
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; margin: 0; padding: 0;">
+    <div style="background-color: #F5F5F5; padding: 0; margin: 0;">
+
+      <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+            <!--[if !mso 9]><!-->
 
     <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">Thank you for your order. From our New York City atelier to your closet &#8211; your order will arrive shortly. We will send you another email once your package ships.
 
@@ -391,7 +393,7 @@
     {% capture question_mark %}?{% endcapture %}
     <!-- SENSE -->
 
-      <!-- BEGIN: CONTAINER -->
+        <!-- BEGIN: CONTAINER -->
 <table class="container container_header" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -464,7 +466,7 @@
 <!-- END : CONTAINER -->
 
 
-      <table class="container container_main" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
+        <table class="container container_main" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
       <th valign="top" style="mso-line-height-rule: exactly;">
@@ -1266,7 +1268,7 @@
 </tr>
 </table>
 
-      <!-- BEGIN: CONTAINER -->
+        <!-- BEGIN: CONTAINER -->
 <table class="container container_footer" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -1372,7 +1374,9 @@
 </tbody>
 </table>
 
+      </div>
     </div>
+
   </body>
 </html>
 
