--- a/output/payment_error_en.html
+++ b/output/payment_error_en.html
@@ -377,9 +377,11 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-    <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
-          <!--[if !mso 9]><!-->
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; margin: 0; padding: 0;">
+    <div style="background-color: #F5F5F5; padding: 0; margin: 0;">
+
+      <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+            <!--[if !mso 9]><!-->
 
     <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">You added items to your shopping cart but the payment couldn&#8217;t be processed. You haven&#8217;t been charged.
 
@@ -391,7 +393,7 @@
     {% capture question_mark %}?{% endcapture %}
     <!-- SENSE -->
 
-      <!-- BEGIN: CONTAINER -->
+        <!-- BEGIN: CONTAINER -->
 <table class="container container_header" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -464,7 +466,7 @@
 <!-- END : CONTAINER -->
 
 
-      
+        
             <!-- BEGIN: CONTAINER -->
             <table class="container container_main" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
               <tbody>
@@ -490,7 +492,8 @@
                                                 <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                                   <tr>
                                                     <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                                      <h3 data-key="26492793_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-style: none; letter-spacing: 1.5px; Margin: 0;" align="left">Your payment couldn't be processed</h3>
+                                                      <h1 data-key="26492906_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; margin: 0;" align="center">Your payment couldn't be processed</h1>
+
                                                     </th>
                                                   </tr>
                                                 </table>
@@ -589,7 +592,7 @@
             </table>
             <!-- END : CONTAINER -->
 
-      <!-- BEGIN: CONTAINER -->
+        <!-- BEGIN: CONTAINER -->
 <table class="container container_footer" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -695,7 +698,9 @@
 </tbody>
 </table>
 
+      </div>
     </div>
+
   </body>
 </html>
 
